Alteração no texto de apresentação

--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
             <div id="About-Text">
                 <h2>Quem esta por trás do projeto ?</h2>
                 <h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tristique justo nec ipsum rhoncus lacinia. 
-                    Donec a lacus vel est malesuada bibendum. Curabitur aliquam massa semper nisi condimentum laoreet. 
-                    Suspendisse potenti. Quisque congue, quam ac placerat bibendum, quam quam sodales tellus, ac euismod odio risus eget neque. 
-                    Mauris accumsan sem a dolor blandit, ultricies tempor metus bibendum. 
-                    Vestibulum fermentum mattis justo ac accumsan. In purus mauris, dictum nec imperdiet eget, porta ac purus. 
-                    Ut vehicula lorem quis ante vehicula ultrices. Nunc ac molestie lectus, hendrerit dapibus nunc. 
-                    Vivamus tincidunt eros lacus, eget efficitur nunc tincidunt sed. Cras ac nunc ligula. 
-                    Aenean quis imperdiet velit, et ultricies justo. Integer egestas gravida magna, a rutrum lorem accumsan ut.
+                    É um prazer recebê-los em meu universo sonoro e visual.
+                    Meu nome é Adauto Padovan Junior, nasci em 1994 e sou apaixonado por criar experiências que transcendem 
+                    o ordinário através da produção musical e edição de vídeos. 
+                    Seja bem-vindo à minha jornada artística, onde som e imagem se encontram para criar magia. 
+                    Estou aqui para colaborar e inovar ao seu lado!
                 </h3>
             </div>
         </div>
