Alteraçao no rodape

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div id="Footer">
-        <h4>Copyright &copy; 2024 as7chaves Studio | CNPJ: 50.349.605/0001-60</h4>
+        <h4>Copyright &copy; 2024 a7chaves Studio | CNPJ: 50.349.605/0001-60</h4>
      </div>
 </body>
 </html> 
