Alteracao de logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="Menu">
-        <img id="Logo" src="./Assets/logoFundoBranco.jpg" alt="">
+        <img id="Logo" src="./Assets/LogoSemFundo.png" alt="">
         <div>
             <a href="#aboutus">Sobre Nós</a>
             <a target="_blank" href="https://linktr.ee/editbyjuck">Redes Sociais</a>
