--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link rel="shortcut icon" type="imagex/png" href="./Assets/LogoSemFundo.png">
 </head>
 <body>
-    <div id="Menu">
-        <img id="Logo" src="./Assets/LogoSemFundo.png" alt="">
-        <div>
-            <a href="#aboutus">Sobre Nós</a>
-            <a target="_blank" href="https://linktr.ee/editbyjuck">Redes Sociais</a>
-        </div>  
-    </div>
+   
     <div id="Main">
         <div id="Apresentacao-Empresa">
             <img id="Logo-Empresa" src="./Assets/LogoFundoPreto.jpg" alt="Logo da Empresa">
             <h1 id="nomeStudio">A7CHAVES STUDIO</h1>
-            <h3 id="slogan">Gravação, Mixagem, Masterização, Direção, Captação e Edição de Vídeos</h3>
+            <h3 id="slogan">Gravação, Mixagem, Masterização,<br> Direção, Captação e Edição de Vídeos</h3>
+        </div>
+        <div id="Menu">
+            <!--<img id="Logo" src="./Assets/LogoSemFundo.png" alt="">-->
+            <div>
+                <a target="_blank" href="https://linktr.ee/editbyjuck">Redes Sociais e Contato</a>
+            </div>  
         </div>
         <div id="aboutus">
             <img id="Logo-Empresa" src="./Assets/Juck.png" alt="Logo da Empresa">
